--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Antony Kagwanja</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -18,86 +18,216 @@
       --gradient: linear-gradient(135deg, #2ecc71 0%, #1abc9c 100%);
     }
 
-    * {margin:0; padding:0; box-sizing:border-box; font-family:'Inter','Segoe UI',sans-serif;}
-    html {scroll-behavior:smooth;}
-    body {background-color:var(--bg-primary); color:var(--text-primary); line-height:1.6;}
-    a {text-decoration:none; color:var(--accent); transition:color .3s ease;}
-    a:hover {color:#1abc9c;}
-    .container {width:90%; max-width:1200px; margin:0 auto; padding:0 20px;}
-    section {padding:5rem 0;}
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', 'Segoe UI', sans-serif;
+    }
+
+    html { scroll-behavior: smooth; }
+
+    body {
+      background-color: var(--bg-primary);
+      color: var(--text-primary);
+      line-height: 1.6;
+    }
+
+    a {
+      text-decoration: none;
+      color: var(--accent);
+      transition: color 0.3s ease;
+    }
+    a:hover { color: #1abc9c; }
+
+    .container {
+      width: 90%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    section { padding: 5rem 0; }
+
     .btn {
-      display:inline-block; padding:12px 28px; background:var(--gradient); color:white;
-      border-radius:6px; font-weight:600; border:none; cursor:pointer;
-      transition:transform .3s ease, box-shadow .3s ease;
+      display: inline-block;
+      padding: 12px 28px;
+      background: var(--gradient);
+      color: white;
+      border-radius: 6px;
+      font-weight: 600;
+      border: none;
+      cursor: pointer;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-    .btn:hover {transform:translateY(-2px); box-shadow:0 10px 20px rgba(46,204,113,0.3);}
-    .btn-outline {background:transparent; border:2px solid var(--accent); color:var(--accent); margin-left:1rem;}
+    .btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 10px 20px rgba(46, 204, 113, 0.3);
+    }
+    .btn-outline {
+      background: transparent;
+      border: 2px solid var(--accent);
+      color: var(--accent);
+      margin-left: 1rem;
+    }
 
-    /* Nav */
+    /* Navigation */
     nav {
-      display:flex; justify-content:space-between; align-items:center;
-      padding:1.5rem 0; position:fixed; top:0; width:100%;
-      background-color:rgba(10,10,10,0.9); backdrop-filter:blur(10px); z-index:1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1.5rem 0;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: rgba(10, 10, 10, 0.9);
+      backdrop-filter: blur(10px);
+      z-index: 1000;
     }
-    .logo {font-size:1.5rem; font-weight:700; background:var(--gradient);
-      -webkit-background-clip:text; background-clip:text; color:transparent;}
-    .nav-links {display:flex; list-style:none; gap:2rem;}
-    .nav-links a {color:var(--text-primary); font-weight:500;}
-    .nav-links a:hover {color:var(--accent);}
+    .logo {
+      font-size: 1.5rem;
+      font-weight: 700;
+      background: var(--gradient);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+    }
+    .nav-links {
+      display: flex;
+      list-style: none;
+      gap: 2rem;
+    }
+    .nav-links a {
+      color: var(--text-primary);
+      font-weight: 500;
+    }
+    .nav-links a:hover { color: var(--accent); }
 
-    /* Hero */
-    #hero {height:100vh; display:flex; align-items:center; padding-top:4rem;}
-    .hero-content {max-width:800px;}
-    .hero-tag {color:var(--accent); font-weight:600; margin-bottom:1rem; display:block;}
-    h1 {font-size:3.5rem; line-height:1.2; margin-bottom:1.5rem;
-      background:linear-gradient(135deg,#fff 0%,#a1a1a6 100%);
-      -webkit-background-clip:text; background-clip:text; color:transparent;}
-    .hero-desc {font-size:1.2rem; color:var(--text-secondary); margin-bottom:2.5rem; max-width:600px;}
+    /* Hero Section */
+    #hero {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      padding-top: 4rem;
+    }
+    .hero-content { max-width: 800px; }
+    .hero-tag {
+      color: var(--accent);
+      font-weight: 600;
+      margin-bottom: 1rem;
+      display: block;
+    }
+    h1 {
+      font-size: 3.5rem;
+      line-height: 1.2;
+      margin-bottom: 1.5rem;
+      background: linear-gradient(135deg, #ffffff 0%, #a1a1a6 100%);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+    }
+    .hero-desc {
+      font-size: 1.2rem;
+      color: var(--text-secondary);
+      margin-bottom: 2.5rem;
+      max-width: 600px;
+    }
 
     /* Projects */
-    #projects h2 {text-align:center; font-size:2.5rem; margin-bottom:3rem;}
-    .project-grid {display:grid; grid-template-columns:repeat(auto-fit,minmax(350px,1fr)); gap:2rem;}
-    .project-card {background:var(--bg-secondary); border-radius:12px; overflow:hidden; transition:transform .3s ease;}
-    .project-card:hover {transform:translateY(-5px);}
-    .project-img {width:100%; height:220px; background:#2a2a2a; display:flex; align-items:center; justify-content:center; color:var(--text-secondary); font-size:3rem;}
-    .project-content {padding:1.5rem;}
-    .project-title {font-size:1.5rem; margin-bottom:.5rem;}
-    .project-desc {color:var(--text-secondary); margin-bottom:1.5rem;}
-    .project-tech {display:flex; flex-wrap:wrap; gap:.5rem; margin-bottom:1.5rem;}
-    .tech-tag {background:rgba(46,204,113,0.2); color:var(--accent); padding:.3rem .7rem; border-radius:20px; font-size:.85rem;}
-    .project-links a {margin-right:1rem;}
+    #projects h2, #skills h2, #contact h2, #about h2 {
+      text-align: center;
+      font-size: 2.5rem;
+      margin-bottom: 2.5rem;
+    }
+    .project-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      gap: 2rem;
+    }
+    .project-card {
+      background: var(--bg-secondary);
+      border-radius: 12px;
+      overflow: hidden;
+      transition: transform 0.3s ease;
+    }
+    .project-card:hover { transform: translateY(-5px); }
+    .project-img {
+      width: 100%;
+      height: 220px;
+      background: #2a2a2a;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--text-secondary);
+      font-size: 3rem;
+    }
+    .project-content { padding: 1.5rem; }
+    .project-title { font-size: 1.5rem; margin-bottom: 0.5rem; }
+    .project-desc { color: var(--text-secondary); margin-bottom: 1.5rem; }
+    .tech-tag {
+      background: rgba(46, 204, 113, 0.2);
+      color: var(--accent);
+      padding: 0.3rem 0.7rem;
+      border-radius: 20px;
+      font-size: 0.85rem;
+      margin-right: 0.5rem;
+    }
 
     /* About */
-    #about {background:var(--bg-secondary);}
-    .about-flex {display:flex; align-items:center; gap:4rem; flex-wrap:wrap;}
-    .about-img img {border-radius:12px; width:300px; height:400px; object-fit:cover;}
-    .about-content {flex:2;}
-    #about h2 {font-size:2.5rem; margin-bottom:1.5rem;}
-    #about p {margin-bottom:1.5rem; color:var(--text-secondary);}
+    #about { background: var(--bg-secondary); }
+    .about-flex {
+      display: flex;
+      align-items: center;
+      gap: 3rem;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .avatar {
+      width: 300px;
+      height: 300px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 5px solid var(--accent);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.5);
+    }
+    .about-content { flex: 1; min-width: 300px; }
 
     /* Skills */
-    #skills h2 {text-align:center; font-size:2.5rem; margin-bottom:3rem;}
-    .skills-grid {display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:2rem;}
-    .skill-category h3 {margin-bottom:1rem; color:var(--accent);}
-    .skill-list {list-style:none;}
-    .skill-list li {margin-bottom:.7rem; color:var(--text-secondary);}
+    .skills-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 2rem;
+    }
+    .skill-category h3 { margin-bottom: 1rem; color: var(--accent); }
+    .skill-list { list-style: none; }
+    .skill-list li { margin-bottom: 0.7rem; color: var(--text-secondary); }
 
     /* Contact */
-    #contact {text-align:center; background:var(--bg-secondary);}
-    #contact h2 {font-size:2.5rem; margin-bottom:1rem;}
-    #contact p {color:var(--text-secondary); margin-bottom:2rem; max-width:600px; margin-left:auto; margin-right:auto;}
-    form {max-width:600px; margin:0 auto; text-align:left;}
-    form input, form textarea {
-      width:100%; padding:12px; margin-bottom:1rem; border-radius:6px;
-      border:1px solid #333; background:#0f0f0f; color:var(--text-primary);
+    #contact { background: var(--bg-secondary); padding-bottom: 4rem; }
+    #contact p {
+      color: var(--text-secondary);
+      max-width: 600px;
+      margin: 0 auto 3rem;
     }
-    form input:focus, form textarea:focus {outline:none; border-color:var(--accent);}
-    .contact-links {margin-top:2rem; display:flex; justify-content:center; gap:2rem; flex-wrap:wrap;}
-    .contact-icon {font-size:2.5rem; color:var(--text-primary); transition:color .3s ease;}
-    .contact-icon:hover {color:var(--accent);}
+    .contact-links {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+    }
+    .contact-icon {
+      font-size: 2.5rem;
+      color: var(--text-primary);
+      transition: color 0.3s ease;
+    }
+    .contact-icon:hover { color: var(--accent); }
 
     /* Footer */
-    footer {text-align:center; padding:2rem 0; color:var(--text-secondary); font-size:.9rem;}
+    footer {
+      text-align: center;
+      padding: 2rem 0;
+      color: var(--text-secondary);
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
@@ -132,7 +262,51 @@
     <div class="container">
       <h2>My Projects</h2>
       <div class="project-grid">
-        <!-- Project cards (same as before) -->
+        <div class="project-card">
+          <div class="project-img"><i class="fas fa-laptop-code"></i></div>
+          <div class="project-content">
+            <h3 class="project-title">School Management Console</h3>
+            <p class="project-desc">A simple Python application to manage student records and grades, demonstrating foundational programming logic and problem-solving.</p>
+            <div class="project-tech">
+              <span class="tech-tag">Python</span>
+              <span class="tech-tag">Basic I/O</span>
+            </div>
+            <div class="project-links">
+              <a href="#" target="_blank"><i class="fab fa-github"></i> Code (Coming Soon)</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-img"><i class="fas fa-globe"></i></div>
+          <div class="project-content">
+            <h3 class="project-title">Personal Portfolio Website</h3>
+            <p class="project-desc">The very website you are viewing! Built from scratch with HTML and CSS to showcase my journey and learn web development fundamentals.</p>
+            <div class="project-tech">
+              <span class="tech-tag">HTML</span>
+              <span class="tech-tag">CSS</span>
+              <span class="tech-tag">JavaScript</span>
+            </div>
+            <div class="project-links">
+              <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Site</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-img"><i class="fas fa-lightbulb"></i></div>
+          <div class="project-content">
+            <h3 class="project-title">Future Innovation Project</h3>
+            <p class="project-desc">I am constantly learning and experimenting with new ideas. This space is reserved for my next big project. Stay tuned for updates!</p>
+            <div class="project-tech">
+              <span class="tech-tag">Learning</span>
+              <span class="tech-tag">Planning</span>
+            </div>
+            <div class="project-links">
+              <a href="#contact"><i class="fas fa-envelope"></i> Suggest an Idea</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -141,9 +315,7 @@
   <section id="about">
     <div class="container">
       <div class="about-flex">
-        <div class="about-img">
-          <img src="antony.jpg" alt="Antony Kagwanja Githure" class="avatar"/>
-        </div>
+        <img src="antony.jpg" alt="Antony Kagwanja Githure" class="avatar"/>
         <div class="about-content">
           <h2>About Me</h2>
           <p>Hello! I'm Antony Kagwanja, a dedicated student currently attending Weithaga Boys High School in Kenya. My journey in technology is just beginning, and I am incredibly enthusiastic about software development and the endless possibilities it creates.</p>
@@ -160,7 +332,33 @@
     <div class="container">
       <h2>My Skills & Interests</h2>
       <div class="skills-grid">
-        <!-- Skills categories (same as before) -->
+        <div class="skill-category">
+          <h3>Currently Learning</h3>
+          <ul class="skill-list">
+            <li>Web Development (HTML, CSS)</li>
+            <li>Programming Fundamentals</li>
+            <li>Python</li>
+            <li>JavaScript</li>
+          </ul>
+        </div>
+        <div class="skill-category">
+          <h3>Personal Strengths</h3>
+          <ul class="skill-list">
+            <li>Problem Solving</li>
+            <li>Adaptability</li>
+            <li>Teamwork</li>
+            <li>Eagerness to Learn</li>
+          </ul>
+        </div>
+        <div class="skill-category">
+          <h3>Future Interests</h3>
+          <ul class="skill-list">
+            <li>Mobile App Development</li>
+            <li>Database Management</li>
+            <li>UI/UX Design</li>
+            <li>Artificial Intelligence</li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
@@ -169,20 +367,12 @@
   <section id="contact">
     <div class="container">
       <h2>Let's Connect!</h2>
-      <p>I'm always open to discussing new opportunities, project ideas, or just a friendly chat about technology. Use the form below to send me a message directly.</p>
-      
-      <!-- Formspree form -->
-      <form action="https://formspree.io/f/mldpdlwn" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="_replyto" placeholder="Your Email" required>
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit" class="btn">Send Message</button>
-      </form>
-
+      <p>I'm always open to discussing new opportunities, project ideas, or just a friendly chat about technology. Feel free to reach out to me via email.</p>
       <div class="contact-links">
-        <a href="mailto:antonykagwanja@gmail.com" aria-label="Email"><i class="fas fa-envelope contact-icon"></i></a>
+        <a href="mailto:antonykagwanja1@gmail.com" aria-label="Email"><i class="fas fa-envelope contact-icon"></i></a>
         <a href="https://github.com/Sir-blanko" target="_blank" aria-label="GitHub"><i class="fab fa-github contact-icon"></i></a>
       </div>
+      <p style="margin-top: 2rem;"><small>P.S. I'm working on creating my GitHub and LinkedIn profiles. They will be added here soon!</small></p>
     </div>
   </section>
 
