Update1 index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Antony Kagwanja</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 
   <style>
     /* Base Styles & Variables */
@@ -228,6 +230,17 @@
       color: var(--text-secondary);
       font-size: 0.9rem;
     }
+
+    i.fab.fa-github {
+        font-size: 30px;  
+        color: black;      
+        transition: 0.3s;
+    }
+    
+    i.fab.fa-github:hover {
+         color: #03fb4e;
+    }
+
   </style>
 </head>
 <body>
@@ -373,6 +386,11 @@
         <a href="#contact-form" aria-label="Email">
           <i class="fas fa-envelope contact-icon"></i>
         </a>
+
+        <a href="https://github.com/Sir-blanko" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+
         
       </div>
       <form id="contact-form" action="https://formspree.io/f/mldpdlwn" method="POST" style="margin-top:2rem; max-width:600px; margin-left:auto; margin-right:auto; text-align:left;">
@@ -400,4 +418,5 @@
   </footer>
 </body>
 </html>
+
 
