Update2 index.html

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
     i.fab.fa-github {
         font-size: 30px;  
-        color: black;      
+        color: white;      
         transition: 0.3s;
     }
     
@@ -418,5 +418,6 @@
   </footer>
 </body>
 </html>
+
 
 
