Update4 index.html

--- a/index.html
+++ b/index.html
@@ -297,6 +297,22 @@ section {
     margin: 2rem 0;
 }
 
+
+.hero-content h1, h1 {
+    color: #1f2937 !important;
+    font-weight: 700;
+}
+
+.hero-content p, .about-content p, p {
+    color: #4b5563 !important;
+    line-height: 1.6;
+}
+
+section h2, h2 {
+    color: #111827 !important;
+    font-weight: 600;
+}
+
   </style>
 </head>
 <body>
@@ -477,6 +493,7 @@ section {
   </footer>
 </body>
 </html>
+
 
 
 
